# fault_injector

./: .gitignore  .gitlab-ci.yml  README.md  demo.ipynb  df_fault_demo.ipynb  df_injector_demo.ipynb  df_injector_test.py  drift_fault_test.py  injector_test.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: demo-checkpoint.ipynb
demos/: data_gen.ipynb  df_injector.ipynb  drift_fault.ipynb  nan_fault.ipynb  normal_noise_fault.ipynb  offset_fault.ipynb  stuck_value_fault.ipynb  uniform_noise_fault.ipynb
docs/: conf.py  index.rst  injector.rst  installation.rst  introduction.rst  modules.rst  supported_faults.rst
docs/api/: generate_data.rst  injector.rst  modules.rst
docs/demos/: data_gen.md  df_injector.md  drift_fault.md  index.rst  nan_fault.md  normal_noise_fault.md  offset_fault.md  stuck_value_fault.md  uniform_noise_fault.md
docs/faults/: drift_fault.rst  nan_fault.rst  normal_noise_fault.rst  (+3 more)
fault_injector/: __init__.py  data_frame_injector.py  dataframe_fault.py  dataframe_fault_utils.py  dataframe_injector.py  df_injector.py  generate_data.py  injector.py  injector_old.py  injector_utils.py  setup.py  visualizer.py
fault_injector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_base_fault.py  test_data_frame_fault_injection.py  test_data_gen.py  test_dataframe_fault.py  test_dataframe_injector.py  test_drift_fault.py  test_fault_injection.py  test_fault_utils.py  test_injector.py  test_nan_fault.py  test_normal_noise_fault.py  test_offset_fault.py  test_stuck_value_fault.py  test_uniform_noise_fault.py
(+136 files in other folders)
