[build-system]
requires = ["setuptools >= 70.0", "wheel >= 0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "fault_injector"
version = "2024.0.1"
dependencies = [
        "matplotlib",
        "numpy",
        "pandas",
        "sphinx",
        "sphinx-rtd-theme",
        "sphinx-jsonschema"
]
requires-python = ">= 3.8"
authors = [
  {name = "Virginia Tech National Security Institute"}
]
maintainers = [
  {name = "Daniel DeCollo", email = "ddecollo@vt.edu"}
]
description = "Sensor Fault Injector"
readme = "README.md"
license = {text = "MIT License"}

[tool.setuptools.packages.find]
where = ["src"]
#include = ["fault_injector"]


[tool.black]
line-length = 1000

[tool.ruff]
line-length = 1000

[tool.isort]
profile = "black"